src/test/deca/context/invalid/created/multiple_definition/variables.deca
// Description:
//      Multiple definition of a variable
// Resultats:
//      Error Ligne 8 : variable already defined

{
    int x, x;
    int x;
}